2014-02-04  Paul Eggert  <eggert@cs.ucla.edu>

	* menu.c (Fx_popup_dialog): Remove label 'dialog_via_menu'.
	It prompted a compile-time diagnostic on GNU/Linux.
	Simplify to remove the need for the label.

2014-02-04  Eli Zaretskii  <eliz@gnu.org>

	* w32menu.c (w32_popup_dialog): Don't condition the whole function
	on HAVE_DIALOGS.  If the dialog is "simple", pop up a message box
	to show it; otherwise return 'unsupported--w32-dialog' to signal
	to the caller that emulation with menus is necessary.  This
	resurrects code inadvertently deleted by the 2013-10-08 commit.
	(Bug#16636)
	(syms_of_w32menu): DEFSYM Qunsupported__w32_dialog.

	* w32term.h (w32_popup_dialog): Prototype is no longer conditioned
	by HAVE_DIALOGS.

	* menu.c (Fx_popup_dialog): Don't condition the call to
	w32_popup_dialog on HAVE_DIALOGS.  If w32_popup_dialog returns a
	special symbol 'unsupported--w32-dialog', emulate the dialog with
	a menu by calling x-popup-menu.

	* menu.h (Qunsupported__w32_dialog): New extern variable.

2014-02-04  Michael Albinus  <michael.albinus@gmx.de>

	* keyboard.c (kbd_buffer_get_event): Read file notification events
	also in batch mode.

	* xgselect.c (xg_select): Read glib events in any case, even if
	there are no file descriptors to watch for.  (Bug#16519)

2014-02-03  Martin Rudalics  <rudalics@gmx.at>

	* dispextern.h (face_id): Add WINDOW_DIVIDER_FIRST_PIXEL_FACE_ID
	and WINDOW_DIVIDER_LAST_PIXEL_FACE_ID.
	* w32term.c (w32_draw_window_divider): Handle first and last
	pixels specially.
	* w32term.h (w32_fill_area_abs): New function.
	* xdisp.c (x_draw_right_divider): Don't draw over bottom
	divider.
	* xfaces.c (realize_basic_faces): Handle new face ids.
	* xfns.c (Fx_create_frame): Call x_default_parameter for right
	and bottom divider width.
	* xterm.c (x_draw_window_divider): Handle first and last pixels
	specially.

2014-02-03  Dmitry Antipov  <dmantipov@yandex.ru>

	* print.c (Fexternal_debugging_output): Add cast to pacify
	--enable-gcc-warnings.