@@ -28568,7 +28568,15 @@ note_mouse_highlight (struct frame *f, int x, int y)
       || part == ON_LEFT_MARGIN || part == ON_RIGHT_MARGIN)
     {
       note_mode_line_or_margin_highlight (window, x, y, part);
-      return;
+
+      if (part == ON_LEFT_MARGIN || part == ON_RIGHT_MARGIN)
+	{
+	  cursor = FRAME_X_OUTPUT (f)->nontext_cursor;
+	  /* Sho non-text cursor (Bug#16647).  */
+	  goto set_cursor;
+	}
+      else
+	return;
     }
 
 #ifdef HAVE_WINDOW_SYSTEM
